plugin/testData/annotator/perl/unreachableCode/forWhenContinue.code
sub test(){
  my $var = 'test';
  for($var){
      'before';
      when('test'){
          'first';
          continue;
          '<error descr="Unreachable code">first2</error>';
      }
      'after';
  }
  'end';
}